packages/aces-amf-lib/tests/Generated_Samples_AMF/valid_AMFs/38_aces_1_3_multi_camera.amf
<?xml version="1.0" encoding="UTF-8"?>
<aces:acesMetadataFile xmlns:aces="urn:ampas:aces:amf:v2.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns:cdl="urn:ASC:CDL:v1.01" version="2.0">
    <aces:amfInfo>
        <aces:description>ACES 1.3 Canon C300 Mark III Pipeline</aces:description>
        <aces:author>
            <aces:name>DIT</aces:name>
            <aces:emailAddress>dit@production.com</aces:emailAddress>
        </aces:author>
        <aces:dateTime>
            <aces:creationDateTime>2026-03-26T19:19:49Z</aces:creationDateTime>
            <aces:modificationDateTime>2026-03-26T19:19:49Z</aces:modificationDateTime>
        </aces:dateTime>
        <aces:uuid>urn:uuid:4c92369c-e125-491c-bc22-b5582194a777</aces:uuid>
    </aces:amfInfo>
    <aces:clipId>
        <aces:clipName>A003_C012_1115KT</aces:clipName>
        <aces:file>media%2FA003_C012_1115KT.mxf</aces:file>
    </aces:clipId>
    <aces:pipeline>
        <aces:pipelineInfo>
            <aces:description>Multi-Camera Match Grade - Canon C300 Mark III</aces:description>
            <aces:dateTime>
                <aces:creationDateTime>2026-03-26T19:19:49Z</aces:creationDateTime>
                <aces:modificationDateTime>2026-03-26T19:19:49Z</aces:modificationDateTime>
            </aces:dateTime>
            <aces:uuid>urn:uuid:8ceb5e99-efb2-431e-ac21-87e2f5014bec</aces:uuid>
            <aces:systemVersion>
                <aces:majorVersion>1</aces:majorVersion>
                <aces:minorVersion>3</aces:minorVersion>
                <aces:patchVersion>0</aces:patchVersion>
            </aces:systemVersion>
        </aces:pipelineInfo>
        <aces:inputTransform applied="false">
            <aces:description>Canon C300 Mark III CLog3/Cinema Gamut to ACES2065-1</aces:description>
            <aces:transformId>urn:ampas:aces:transformId:v1.5:IDT.Canon.CanonLog3_CinemaGamut_D55.a1.v2</aces:transformId>
        </aces:inputTransform>
        <aces:lookTransform applied="false">
            <aces:description>Match Grade to A-Camera in ACEScct</aces:description>
            <aces:cdlWorkingSpace>
                <aces:toCdlWorkingSpace>
                    <aces:transformId>urn:ampas:aces:transformId:v1.5:ACEScsc.Academy.ACES_to_ACEScct.a1.0.3</aces:transformId>
                </aces:toCdlWorkingSpace>
                <aces:fromCdlWorkingSpace>
                    <aces:transformId>urn:ampas:aces:transformId:v1.5:ACEScsc.Academy.ACEScct_to_ACES.a1.0.3</aces:transformId>
                </aces:fromCdlWorkingSpace>
            </aces:cdlWorkingSpace>
            <cdl:ASC_SOP>
                <cdl:Slope>1.08 1.02 0.95</cdl:Slope>
                <cdl:Offset>0.005 0.0 -0.005</cdl:Offset>
                <cdl:Power>1.0 1.0 1.0</cdl:Power>
            </cdl:ASC_SOP>
            <cdl:ASC_SAT>
                <cdl:Saturation>1.03</cdl:Saturation>
            </cdl:ASC_SAT>
        </aces:lookTransform>
        <aces:outputTransform applied="false">
            <aces:description>RRT + Rec.709 ODT for Dailies</aces:description>
            <aces:referenceRenderingTransform>
                <aces:transformId>urn:ampas:aces:transformId:v1.5:RRT.a1.0.3</aces:transformId>
            </aces:referenceRenderingTransform>
            <aces:outputDeviceTransform>
                <aces:transformId>urn:ampas:aces:transformId:v1.5:ODT.Academy.Rec709_100nits_dim.a1.0.3</aces:transformId>
            </aces:outputDeviceTransform>
        </aces:outputTransform>
    </aces:pipeline>
</aces:acesMetadataFile>
